welcome.lessons.welcome.array.has271.Has271.scala.error
has271:4: error: ')' expected but '<-' found.
	while(i<-0 to (nums.length-3))
               ^has271:4: error: illegal start of simple expression
	while(i<-0 to (nums.length-3))
                                     ^